package com.example.nutriscan

import com.google.firebase.auth.FirebaseAuth
import com.google.firebase.firestore.FirebaseFirestore
import kotlinx.coroutines.CoroutineScope
import kotlinx.coroutines.Dispatchers
import kotlinx.coroutines.channels.awaitClose
import kotlinx.coroutines.flow.Flow
import kotlinx.coroutines.flow.callbackFlow
import kotlinx.coroutines.launch

class FirestoreClient {
    private val tag = "FirestoreClient: "
    private val db = FirebaseFirestore.getInstance()
    private val userCollection = "users"
    private val dietaryCollection = "dietaryInfo"

    //adds user data to database
    fun insertUser(user: User): Flow<Boolean> {
        return callbackFlow {
            db.collection(userCollection)
                .document(user.userId)
                .set(user.toHashMap())
                .addOnSuccessListener { document ->
                    println(tag + "insert user with id: ${user.userId}")
                    CoroutineScope(Dispatchers.IO).launch {
                        updateUser(user).collect {}
                    }
                    trySend(true)
                }
                .addOnFailureListener { e ->
                    e.printStackTrace()
                    println(tag + "error inserting user: $e")
                    trySend(false)
                }
            awaitClose {  }
        }
    }

    //updates user data in database
    fun updateUser(user: User): Flow<Boolean?> {
        return callbackFlow{
            val userId = user.userId
            if (userId.isEmpty()) {
                println(tag + "user id is empty")
                trySend(false)
            } else {
                // Handle the case where the user isn't logged in
                db.collection(userCollection)
                    .document(userId)
                    .set(user.toHashMap())
                    .addOnSuccessListener { document ->
                        println(tag + "update user with id: ${user.userId}")
                        trySend(true)
                    }
                    .addOnFailureListener { e ->
                        e.printStackTrace()
                        println(tag + "error updating user: ${e.message}")
                        trySend(false)
                    }
                awaitClose {  }
            }
        }
    }

    //gets user data from database
    fun getUser(uid: String): Flow<User?> {
        return callbackFlow{
            db.collection(userCollection).document(uid)
                .get()
                .addOnSuccessListener { document ->
                    if (document.exists()) {
                        trySend(document.data?.toUser())
                    } else {
                        println(tag + "user not found: $uid")
                        trySend(null)
                    }
                }
                .addOnFailureListener { e ->
                    e.printStackTrace()
                    println(tag + "error getting user: ${e.message}")
                    trySend(null)
                }
            awaitClose {  }
        }
    }

    //structure for saving data to database
    private fun User.toHashMap(): HashMap<String, Any?> {
        return hashMapOf(
            "userId" to userId,//primary key
            "firstName" to firstName,
            "lastName" to lastName,
            "email" to email
        )
    }

    //structure for reading from the database
    private fun Map<String, Any>.toUser(): User {
        return User(
            userId = this["userId"] as String,
            firstName = this["firstName"] as String,
            lastName = this["lastName"] as String,
            email = this["email"] as String
        )
    }



    //dietary Functions

    //adds dietary data to database
    fun insertDietary(dietary: Dietary): Flow<Boolean> {
        return callbackFlow {
            val docRef = db.collection(dietaryCollection).document()
            val newDietary = dietary.copy(dietaryId = docRef.id)

            docRef.set(newDietary.toHashMap())
                .addOnSuccessListener {
                    println(tag + "insert dietary info with id: ${dietary.dietaryId}")
                    trySend(true)
                }
                .addOnFailureListener { e ->
                    e.printStackTrace()
                    println(tag + "error inserting dietary info: ${e.message}")
                    trySend(false)
                }
            awaitClose {  }
        }
    }

    //updates dietary data in database
    fun updateDietary(dietary: Dietary): Flow<Boolean?> {
        return callbackFlow{
            val userId = dietary.dietaryId
            if (userId.isEmpty()) {
                println(tag + "dietary id is empty")
                trySend(false)
            } else {
                // Handle the case where the user isn't logged in
                db.collection(dietaryCollection)
                    .document(userId)
                    .set(dietary.toHashMap())
                    .addOnSuccessListener { document ->
                        println(tag + "update dietary info with id: ${dietary.dietaryId}")
                        trySend(true)
                    }
                    .addOnFailureListener { e ->
                        e.printStackTrace()
                        println(tag + "error updating dietary info: ${e.message}")
                        trySend(false)
                    }
                awaitClose {  }
            }
        }
    }

    //gets user data from database
    fun getDietary(dietaryId: String): Flow<Dietary?> {
        return callbackFlow{
            db.collection(dietaryCollection).document(dietaryId)
                .get()
                .addOnSuccessListener { document ->
                    if (document.exists()) {
                        trySend(document.data?.toDietary())
                    } else {
                        println(tag + "dietary info not found: $dietaryId")
                        trySend(null)
                    }
                }
                .addOnFailureListener { e ->
                    e.printStackTrace()
                    println(tag + "error getting dietary info: ${e.message}")
                    trySend(null)
                }
            awaitClose {  }
        }
    }

    //structure for saving data to database
    private fun Dietary.toHashMap(): HashMap<String, Any?> {
        return hashMapOf(
            "dietaryId" to dietaryId, //primary key
            "age" to age,
            "weight" to weight,
            "metricUnit" to metricUnit,
            "activityLevel" to activityLevel,
            "goals" to goals,
            "allergens" to allergens,
            "diets" to diets,
            "userId" to userId //foreign key
        )
    }

    //structure for reading from the database
    private fun Map<String, Any>.toDietary(): Dietary {
        return Dietary(
            dietaryId = this["dietaryId"] as? String ?: "",
            age = (this["age"] as? Long)?.toInt() ?: 0,
            weight = (this["weight"] as? Long)?.toInt() ?: 0,
            metricUnit = this["metricUnit"] as? String ?: "",
            activityLevel = (this["activityLevel"] as? Long)?.toInt() ?: 0,
            goals = (this["goals"] as? List<*>)?.filterIsInstance<String>() ?: emptyList(),
            allergens = (this["allergens"] as? List<*>)?.filterIsInstance<String>() ?: emptyList(),
            diets = (this["diets"] as? List<*>)?.filterIsInstance<String>() ?: emptyList(),
            userId = this["userId"] as? String ?: ""
        )
    }

    fun getDietaryByUserId(userId: String): Flow<Dietary?> {
        return callbackFlow {
            db.collection(dietaryCollection)
                .whereEqualTo("userId", userId)
                .get()
                .addOnSuccessListener { result ->
                    trySend(result.documents.firstOrNull()?.data?.toDietary())
                }
                .addOnFailureListener { trySend(null) }
            awaitClose { }
        }
    }

    fun getAllergensByUserId(userId: String): Flow<List<String>> {
        return callbackFlow {
            db.collection(dietaryCollection)
                .whereEqualTo("userId", userId)
                .get()
                .addOnSuccessListener { result ->
                    val allergens = result.documents
                        .firstOrNull()
                        ?.data
                        ?.let { (it["allergens"] as? List<*>)?.filterIsInstance<String>() }
                        ?: emptyList()
                    trySend(allergens)
                }
                .addOnFailureListener {
                    trySend(emptyList())
                }
            awaitClose { }
        }
    }

    fun getDailyLogs(userId: String, startOfDay: Long, endOfDay: Long): Flow<List<NutritionLog>> {
        return callbackFlow {
            val listener = db.collection("nutritionLogs")
                .whereEqualTo("userId", userId)
                .whereGreaterThanOrEqualTo("timestamp", startOfDay)
                .whereLessThanOrEqualTo("timestamp", endOfDay)
                .addSnapshotListener { snapshot, error ->
                    if (error != null) { println("$tag getDailyLogs error: ${error.message}"); return@addSnapshotListener }
                    trySend(snapshot?.documents?.mapNotNull { it.data?.toNutritionLog() } ?: emptyList())
                }
            awaitClose { listener.remove() }
        }
    }

    // nutrition log functions

    fun insertNutritionLog(log: NutritionLog): Flow<Boolean> {
        return callbackFlow {
            val docRef = db.collection("nutritionLogs").document()
            val newLog = log.copy(logId = docRef.id)
            docRef.set(newLog.toHashMap())
                .addOnSuccessListener {
                    println(tag + "inserted nutrition log: ${newLog.logId}")
                    trySend(true)
                }
                .addOnFailureListener { e ->
                    e.printStackTrace()
                    trySend(false)
                }
            awaitClose { }
        }
    }

    fun getWeeklyLogs(userId: String): Flow<List<NutritionLog>> {
        return callbackFlow {
            val oneWeekAgo = System.currentTimeMillis() - 7L * 24 * 60 * 60 * 1000
            val listener = db.collection("nutritionLogs")
                .whereEqualTo("userId", userId)
                .whereGreaterThanOrEqualTo("timestamp", oneWeekAgo)
                .addSnapshotListener { snapshot, error ->
                    if (error != null) { println("$tag getWeeklyLogs error: ${error.message}"); return@addSnapshotListener }
                    trySend(snapshot?.documents?.mapNotNull { it.data?.toNutritionLog() } ?: emptyList())
                }
            awaitClose { listener.remove() }
        }
    }

    private fun NutritionLog.toHashMap(): HashMap<String, Any?> {
        return hashMapOf(
            "logId" to logId,
            "userId" to userId,
            "productName" to productName,
            "calories" to calories,
            "proteinG" to proteinG,
            "carbsG" to carbsG,
            "fatG" to fatG,
            "sugarG" to sugarG,
            "waterMl" to waterMl,
            "timestamp" to timestamp
        )
    }

    private fun Map<String, Any>.toNutritionLog(): NutritionLog {
        return NutritionLog(
            logId = this["logId"] as? String ?: "",
            userId = this["userId"] as? String ?: "",
            productName = this["productName"] as? String ?: "",
            calories = (this["calories"] as? Long)?.toInt() ?: 0,
            proteinG = (this["proteinG"] as? Long)?.toInt() ?: 0,
            carbsG = (this["carbsG"] as? Long)?.toInt() ?: 0,
            fatG = (this["fatG"] as? Long)?.toInt() ?: 0,
            sugarG = (this["sugarG"] as? Long)?.toInt() ?: 0,
            waterMl = (this["waterMl"] as? Long)?.toInt() ?: 0,
            timestamp = this["timestamp"] as? Long ?: 0L
        )
    }
}